@@ -114,16 +114,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Locale
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Map
 import|;
 end_import
@@ -176,93 +166,7 @@ name|lucene
 operator|.
 name|store
 operator|.
-name|IOContext
-operator|.
-name|Context
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
 name|LockFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|NRTCachingDirectory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|NativeFSLockFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|NoLockFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|SimpleFSLockFactory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|SingleInstanceLockFactory
 import|;
 end_import
 
@@ -339,54 +243,6 @@ operator|.
 name|util
 operator|.
 name|ObjectReleaseTracker
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|store
-operator|.
-name|blockcache
-operator|.
-name|BlockDirectory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|store
-operator|.
-name|hdfs
-operator|.
-name|HdfsDirectory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|store
-operator|.
-name|hdfs
-operator|.
-name|HdfsLockFactory
 import|;
 end_import
 
@@ -1687,7 +1543,69 @@ name|CacheValue
 name|val
 parameter_list|)
 block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Closing directory, CoreContainer#isShutdown={}"
+argument_list|,
+name|coreContainer
+operator|!=
+literal|null
+condition|?
+name|coreContainer
+operator|.
+name|isShutDown
+argument_list|()
+else|:
+literal|"null"
+argument_list|)
+expr_stmt|;
 try|try
+block|{
+if|if
+condition|(
+name|coreContainer
+operator|!=
+literal|null
+operator|&&
+name|coreContainer
+operator|.
+name|isShutDown
+argument_list|()
+operator|&&
+name|val
+operator|.
+name|directory
+operator|instanceof
+name|ShutdownAwareDirectory
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Closing directory on shutdown: "
+operator|+
+name|val
+operator|.
+name|path
+argument_list|)
+expr_stmt|;
+operator|(
+operator|(
+name|ShutdownAwareDirectory
+operator|)
+name|val
+operator|.
+name|directory
+operator|)
+operator|.
+name|closeOnShutdown
+argument_list|()
+expr_stmt|;
+block|}
+else|else
 block|{
 name|log
 operator|.
@@ -1707,6 +1625,7 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
 assert|assert
 name|ObjectReleaseTracker
 operator|.
