@@ -1037,6 +1037,13 @@ name|NamedList
 name|args
 parameter_list|)
 block|{
+name|super
+operator|.
+name|init
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
 name|params
 operator|=
 name|SolrParams
