@@ -176,6 +176,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|core
+operator|.
+name|ShutdownAwareDirectory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|store
 operator|.
 name|hdfs
@@ -215,6 +229,8 @@ class|class
 name|BlockDirectory
 extends|extends
 name|FilterDirectory
+implements|implements
+name|ShutdownAwareDirectory
 block|{
 DECL|field|LOG
 specifier|private
@@ -1225,6 +1241,30 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Override
+DECL|method|closeOnShutdown
+specifier|public
+name|void
+name|closeOnShutdown
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"BlockDirectory closing on shutdown"
+argument_list|)
+expr_stmt|;
+comment|// we are shutting down, no need to clean up cache
+name|super
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 annotation|@
 name|Override
